--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.4"
+log = "0.4.27"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["full"] }
-tower-http = { version = "0.6.6", features = ["cors"] }
+tower-http = { version = "0.6.6", features = ["cors", "trace"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
